--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/1stbootstrapsite/">Boost for Coders</a>
+            <a class="navbar-brand" href="/1stbootstrapsite/index.html">Boost for Coders</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/1stbootstrapsite/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/1stbootstrapsite/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/1stbootstrapsite/about.html">About Me</a>
