--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/1stbootstrapsite/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/1stbootstrapsite/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/1stbootstrapsite/about.html">About Me</a>
