--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="Home.html">Boost for Coders</a>
+                <a class="navbar-brand" href="/1stbootstrapsite/">Boost for Coders</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="Home.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="/1stbootstrapsite/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">About Me</a>
